--- a/docs/guides/testing.mdx
+++ b/docs/guides/testing.mdx
@@ -42,7 +42,8 @@ If you are using zustand, as documented in [TypeScript Guide](./typescript.md), 
 
 ```tsx
 import { create as actualCreate, StateCreator } from 'zustand'
-// const actualCreate = jest.requireActual('zustand') // if using jest
+// const actualCreate = jest.requireActual<typeof import("zustand")>("zustand").create;
+
 import { act } from 'react-dom/test-utils'
 
 // a variable to hold reset functions for all stores declared in the app
@@ -50,8 +51,7 @@ const storeResetFns = new Set<() => void>()
 
 // when creating a store, we get its initial state, create a reset function and add it in the set
 export const create =
-  () =>
-  <S,>(createState: StateCreator<S>) => {
+  <S>(createState: StateCreator<S>) => {
     const store = actualCreate<S>(createState)
     const initialState = store.getState()
     storeResetFns.add(() => store.setState(initialState, true))
